--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # theme: jekyll-theme-modernist
 # theme: jekyll-theme-minimal
-# theme: jekyll-theme-midnight
+theme: jekyll-theme-midnight
 
 page: README.md
 title: Live Demo
