--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # theme: jekyll-theme-modernist
 # theme: jekyll-theme-minimal
-theme: jekyll-theme-midnight
+#theme: jekyll-theme-midnight
 
-title: Live Demo
-date: 2020-02-28
+#title: Live Demo
